force-app/main/default/objects/Project_Team_Member__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibility of Project</label>
    <type>Checkbox</type>
</CustomField>