force-app/main/default/objects/Project_Team_Member__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>