force-app/main/default/objects/Project_Team_Member__c/fields/Date_Agreed_by_Researcher__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreed_by_Researcher__c</fullName>
    <label>Date Agreed by Researcher</label>
    <type>Date</type>
</CustomField>