force-app/main/default/objects/Project_Team_Member__c/fields/Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>