force-app/main/default/objects/Project_Team_Member__c/fields/Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Status__c</fullName>
    <label>Invitation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>