force-app/main/default/objects/Project_Team_Member__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Project FTE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>