force-app/main/default/objects/Project_Team_Member__c/fields/Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Name__c</fullName>
    <label>Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>