force-app/main/default/objects/Project_Team_Member__c/fields/Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Project_Proposal__c</fullName>
    <label>Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Project Team Members</relationshipLabel>
    <relationshipName>Project_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>