force-app/main/default/objects/Project_Team_Member__c/fields/Project_Proposal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Proposal_Record_Id__c</fullName>
    <label>Project Proposal Record Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>