force-app/main/default/objects/Project_Team_Member__c/fields/Project_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Team Memberships</relationshipLabel>
    <relationshipName>Project_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>