force-app/main/default/objects/Project_Team_Member__c/fields/Research_Centre_Id__c.field-meta.xml
<CustomField>
    <fullName>Research_Centre_Id__c</fullName>
    <label>Research Centre Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>