force-app/main/default/objects/Project_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Chief Investigator</fullName>
            </value>
            <value>
                <fullName>Chief Investigator</fullName>
            </value>
            <value>
                <fullName>Partner Researcher</fullName>
            </value>
            <value>
                <fullName>Overall Lead Chief Investigator</fullName>
            </value>
            <value>
                <fullName>External Researcher</fullName>
            </value>
            <value>
                <fullName>Research Assistant</fullName>
            </value>
            <value>
                <fullName>Graduate Researcher</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Student or Graduate Researcher Supervisor</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Research Centre Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>