force-app/main/default/objects/Project_Team_Member__c/fields/Team_Member_Contact__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Team Membership (External Team Member)</relationshipLabel>
    <relationshipName>Project_Team_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>