force-app/main/default/objects/Project_Team_Member__c/fields/Team_Member_User__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Uni Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>