force-app/main/default/objects/Project_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Proposal__c</columns>
    <columns>Status__c</columns>
    <columns>Role__c</columns>
    <columns>Project_Team_Member__c</columns>
    <columns>Date_Added__c</columns>
    <columns>Date_Removed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>